# tracking-server

./: .coveragerc  Dockerfile  README.md  pyproject.toml  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
.github/workflows/: docker.yml  tox.yml
idiet/tracking/: api.py  core.py  wsgi.py
idiet/tracking/api/: __init__.py  user.py
idiet/tracking/models/: __init__.py  user.py
tests/: test_api.py
tests/api/: test_user.py
