[metadata]
name = idiet.tracking
url = https://github.com/johnhoman/tracking-server
description = iDiet user data tracking
long_description = file: README.md
author = Chartreuse @ NJIT CS684
classifiers =
  Private :: Do Not Upload
  Programming Language :: Python
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8

[options]
packages = idiet_tracking
python_requires = >= 3.6
install_requires =
    Flask
    Flask-RESTful
    sqlalchemy

[flake8]
exclude =
    *__init__.py
